--- a/angularapp/src/app/modules/admin/dashboards/reports/classroom-report/classroom-report.component.html
+++ b/angularapp/src/app/modules/admin/dashboards/reports/classroom-report/classroom-report.component.html
@@ -123,7 +123,7 @@
                     </mat-button-toggle-group>
                     <button mat-fab extended (click)="filterAll()">
                         <mat-icon svgIcon="filter_alt"></mat-icon>
-                        filter
+                        Filtrar
                     </button>
                 </div>
             </div>
