--- a/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
@@ -19,9 +19,7 @@
                             class="icon-size-5 text-secondary"
                             [svgIcon]="'heroicons_solid:chevron-right'"
                         ></mat-icon>
-                        <span class="ml-1 text-secondary"
-                            >Reporte Evaluación Psicológica</span
-                        >
+                        <span class="ml-1 text-secondary">Aulas</span>
                     </div>
                 </div>
                 <div class="flex sm:hidden">
@@ -41,7 +39,7 @@
                 <h2
                     class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate"
                 >
-                    Reporte Aula
+                    Gestionar Aulas
                 </h2>
             </div>
         </div>
@@ -52,7 +50,7 @@
         <div class="flex-auto px-6 py-4 sm:px-10 sm:py-7">
             <!-- CONTENT GOES HERE -->
             <div class="flex flex-col">
-                <div class="grid grid-cols-4 gap-2">
+                <div class="grid sm:grid-cols-4 gap-2 items-center">
                     <mat-form-field>
                         <mat-label>Unidades</mat-label>
                         <mat-select [(value)]="unidadIdSeleccionada">
@@ -94,50 +92,20 @@
                             >
                         </mat-select>
                     </mat-form-field>
-                    <button
-                        mat-fab
-                        extended
-                        (click)="obtnerEstudiantesPorAulaYUnidad()"
-                        class="w-28"
-                    >
-                        <mat-icon svgIcon="filter_alt"></mat-icon>
-                        Filtrar
-                    </button>
-                </div>
-
-                <!-- Inicio del modal para crear unidad -->
-                <div
-                    *ngIf="showCreateUnitModal"
-                    class="fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full z-20"
-                >
-                    <div
-                        class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-md bg-white"
-                    >
-                        <h2 class="text-center text-lg font-bold">
-                            Desea crear una nueva unidad?
-                        </h2>
-                        <div class="mt-5 text-center">
-                            <button
-                                mat-button
-                                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
-                                (click)="onCreateUnit()"
-                            >
-                                Aceptar
-                            </button>
-                            <button
-                                mat-button
-                                class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded ml-4"
-                                (click)="onCancelCreateUnit()"
-                            >
-                                Cancelar
-                            </button>
-                        </div>
+                    <div>
+                        <button
+                            mat-fab
+                            extended
+                            (click)="obtnerEstudiantesPorAulaYUnidad()"
+                        >
+                            <mat-icon svgIcon="filter_alt"></mat-icon>
+                            Filtrar
+                        </button>
                     </div>
                 </div>
-                <!-- Fin del modal -->
 
                 <div class="flex flex-col gap-4">
-                    <div>
+                    <div class="overflow-x-auto">
                         <mat-button-toggle-group
                             [(ngModel)]="items"
                             aria-label="Font Style"
@@ -223,21 +191,13 @@
 
                                 <tr
                                     mat-header-row
-                                    *matHeaderRowDef="[
-                                        'numero',
-                                        'NombreCompleto',
-                                        'EstadoEstudiante'
-                                    ]"
+                                    *matHeaderRowDef="displayedColumns"
                                 ></tr>
                                 <tr
                                     mat-row
                                     *matRowDef="
                                         let row;
-                                        columns: [
-                                            'numero',
-                                            'NombreCompleto',
-                                            'EstadoEstudiante'
-                                        ]
+                                        columns: displayedColumns
                                     "
                                 ></tr>
                             </table>
@@ -255,36 +215,26 @@
                             }
                         </div>
                         } @case("assign"){
-                        <div class="flex flex-col">
+                        <div class="flex flex-col gap-2">
+                            <div class="flex flex-wrap gap-2">
+                                @for (fruit of fruits; track fruit) {
+                                <mat-chip-row (removed)="remove(fruit)">
+                                    {{ fruit }}
+                                    <button
+                                        matChipRemove
+                                        [attr.aria-label]="'remove ' + fruit"
+                                    >
+                                        <mat-icon [svgIcon]="'remove'" />
+                                    </button>
+                                </mat-chip-row>
+                                }
+                            </div>
                             <mat-form-field class="flex flex-col">
-                                <mat-chip-grid
-                                    #chipGrid
-                                    aria-label="Fruit selection"
-                                >
-                                    @for (fruit of fruits; track fruit) {
-                                    <mat-chip-row (removed)="remove(fruit)">
-                                        {{ fruit }}
-                                        <button
-                                            matChipRemove
-                                            [attr.aria-label]="
-                                                'remove ' + fruit
-                                            "
-                                        >
-                                            <mat-icon>cancel</mat-icon>
-                                        </button>
-                                    </mat-chip-row>
-                                    }
-                                </mat-chip-grid>
                                 <input
-                                    class="w-full"
-                                    placeholder="New Fruit..."
+                                    matInput
                                     #fruitInput
                                     [formControl]="fruitCtrl"
-                                    [matChipInputFor]="chipGrid"
                                     [matAutocomplete]="auto"
-                                    [matChipInputSeparatorKeyCodes]="
-                                        separatorKeysCodes
-                                    "
                                     (matChipInputTokenEnd)="add($event)"
                                 />
                                 <mat-autocomplete
@@ -299,9 +249,10 @@
                                     }
                                 </mat-autocomplete>
                             </mat-form-field>
-                            <div>
-                                <button mat-button>Asignar</button>
-                            </div>
+                        </div>
+
+                        <div>
+                            <button mat-button>Asignar</button>
                         </div>
                         } @case("register"){
                         <!-- Agregar componente de registro aqui -->
